scenarios/argocd/fakenodes/k3s/istio/gateways/gw-vcluster-k3s.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vcluster-k3s
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "vcluster-k3s-121.172.27.0.3.nip.io"
    - "vcluster-k3s-122.172.27.0.3.nip.io"
    - "vcluster-k3s-123.172.27.0.3.nip.io"
